# esg_toolkit

./: README.md  __init__.py  pyproject.toml
ci/lint/: pre-push
esg_toolkit/: curation_utils.py  data_utils.py  qdrant_utils.py
src/: __init__.py  qdrant_utils.py
tests/: test_qdrant_utils.py
