[tool.poetry]
name = "esg_toolkit"
version = "0.1.0"
description = ""
authors = ["A-baoYang <rubyyang0615@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
pandas = "2.2.0"
pyyaml = "^6.0.1"
qdrant-client = "^1.7.2"
sentence-transformers = "2.2.2"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
gcsfs = "^2024.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
